kernel/antlr4-runtime/kernelParser.cpp

// Generated from kernel.g4 by ANTLR 4.7.2


#include "kernelVisitor.h"

#include "kernelParser.h"


using namespace antlrcpp;
using namespace antlr4;

kernelParser::kernelParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

kernelParser::~kernelParser() {
  delete _interpreter;
}

std::string kernelParser::getGrammarFileName() const {
  return "kernel.g4";
}

const std::vector<std::string>& kernelParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& kernelParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

kernelParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::ProgContext::getRuleIndex() const {
  return kernelParser::RuleProg;
}

void kernelParser::ProgContext::copyFrom(ProgContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StartContext ------------------------------------------------------------------

kernelParser::PContext* kernelParser::StartContext::p() {
  return getRuleContext<kernelParser::PContext>(0);
}

tree::TerminalNode* kernelParser::StartContext::EOF() {
  return getToken(kernelParser::EOF, 0);
}

kernelParser::StartContext::StartContext(ProgContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EndContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::EndContext::EOF() {
  return getToken(kernelParser::EOF, 0);
}

kernelParser::EndContext::EndContext(ProgContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::EndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitEnd(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::ProgContext* kernelParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, kernelParser::RuleProg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case kernelParser::Id: {
        _localctx = dynamic_cast<ProgContext *>(_tracker.createInstance<kernelParser::StartContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(36);
        p();
        setState(37);
        match(kernelParser::EOF);
        break;
      }

      case kernelParser::EOF: {
        _localctx = dynamic_cast<ProgContext *>(_tracker.createInstance<kernelParser::EndContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(39);
        match(kernelParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PContext ------------------------------------------------------------------

kernelParser::PContext::PContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::PContext::getRuleIndex() const {
  return kernelParser::RuleP;
}

void kernelParser::PContext::copyFrom(PContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VisitPContext ------------------------------------------------------------------

kernelParser::SContext* kernelParser::VisitPContext::s() {
  return getRuleContext<kernelParser::SContext>(0);
}

kernelParser::P1Context* kernelParser::VisitPContext::p1() {
  return getRuleContext<kernelParser::P1Context>(0);
}

kernelParser::VisitPContext::VisitPContext(PContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::VisitPContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitVisitP(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::PContext* kernelParser::p() {
  PContext *_localctx = _tracker.createInstance<PContext>(_ctx, getState());
  enterRule(_localctx, 2, kernelParser::RuleP);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<PContext *>(_tracker.createInstance<kernelParser::VisitPContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(42);
    s();
    setState(43);
    p1();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- P1Context ------------------------------------------------------------------

kernelParser::P1Context::P1Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::P1Context::getRuleIndex() const {
  return kernelParser::RuleP1;
}

void kernelParser::P1Context::copyFrom(P1Context *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- P1NothingContext ------------------------------------------------------------------

kernelParser::P1NothingContext::P1NothingContext(P1Context *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::P1NothingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitP1Nothing(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VisitP1Context ------------------------------------------------------------------

kernelParser::SContext* kernelParser::VisitP1Context::s() {
  return getRuleContext<kernelParser::SContext>(0);
}

kernelParser::P1Context* kernelParser::VisitP1Context::p1() {
  return getRuleContext<kernelParser::P1Context>(0);
}

kernelParser::VisitP1Context::VisitP1Context(P1Context *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::VisitP1Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitVisitP1(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::P1Context* kernelParser::p1() {
  P1Context *_localctx = _tracker.createInstance<P1Context>(_ctx, getState());
  enterRule(_localctx, 4, kernelParser::RuleP1);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case kernelParser::Id: {
        _localctx = dynamic_cast<P1Context *>(_tracker.createInstance<kernelParser::VisitP1Context>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(45);
        s();
        setState(46);
        p1();
        break;
      }

      case kernelParser::EOF: {
        _localctx = dynamic_cast<P1Context *>(_tracker.createInstance<kernelParser::P1NothingContext>(_localctx));
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SContext ------------------------------------------------------------------

kernelParser::SContext::SContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::SContext::getRuleIndex() const {
  return kernelParser::RuleS;
}

void kernelParser::SContext::copyFrom(SContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VisitSContext ------------------------------------------------------------------

kernelParser::LhsContext* kernelParser::VisitSContext::lhs() {
  return getRuleContext<kernelParser::LhsContext>(0);
}

kernelParser::RhsContext* kernelParser::VisitSContext::rhs() {
  return getRuleContext<kernelParser::RhsContext>(0);
}

kernelParser::VisitSContext::VisitSContext(SContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::VisitSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitVisitS(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::SContext* kernelParser::s() {
  SContext *_localctx = _tracker.createInstance<SContext>(_ctx, getState());
  enterRule(_localctx, 6, kernelParser::RuleS);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<SContext *>(_tracker.createInstance<kernelParser::VisitSContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(51);
    lhs();
    setState(52);
    match(kernelParser::T__0);
    setState(53);
    rhs(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LhsContext ------------------------------------------------------------------

kernelParser::LhsContext::LhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::LhsContext::getRuleIndex() const {
  return kernelParser::RuleLhs;
}

void kernelParser::LhsContext::copyFrom(LhsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LHSContext ------------------------------------------------------------------

kernelParser::TRefContext* kernelParser::LHSContext::tRef() {
  return getRuleContext<kernelParser::TRefContext>(0);
}

kernelParser::LHSContext::LHSContext(LhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::LHSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitLHS(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::LhsContext* kernelParser::lhs() {
  LhsContext *_localctx = _tracker.createInstance<LhsContext>(_ctx, getState());
  enterRule(_localctx, 8, kernelParser::RuleLhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<LhsContext *>(_tracker.createInstance<kernelParser::LHSContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(55);
    tRef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsContext ------------------------------------------------------------------

kernelParser::RhsContext::RhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::RhsContext::getRuleIndex() const {
  return kernelParser::RuleRhs;
}

void kernelParser::RhsContext::copyFrom(RhsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RHSconstNumContext ------------------------------------------------------------------

kernelParser::ConstNumContext* kernelParser::RHSconstNumContext::constNum() {
  return getRuleContext<kernelParser::ConstNumContext>(0);
}

kernelParser::RHSconstNumContext::RHSconstNumContext(RhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSconstNumContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSconstNum(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSSecondopRHSContext ------------------------------------------------------------------

std::vector<kernelParser::RhsContext *> kernelParser::RHSSecondopRHSContext::rhs() {
  return getRuleContexts<kernelParser::RhsContext>();
}

kernelParser::RhsContext* kernelParser::RHSSecondopRHSContext::rhs(size_t i) {
  return getRuleContext<kernelParser::RhsContext>(i);
}

kernelParser::RhsSecondCalcContext* kernelParser::RHSSecondopRHSContext::rhsSecondCalc() {
  return getRuleContext<kernelParser::RhsSecondCalcContext>(0);
}

kernelParser::RHSSecondopRHSContext::RHSSecondopRHSContext(RhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSSecondopRHSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSSecondopRHS(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OneRHSContext ------------------------------------------------------------------

kernelParser::RhsContext* kernelParser::OneRHSContext::rhs() {
  return getRuleContext<kernelParser::RhsContext>(0);
}

kernelParser::OneRHSContext::OneRHSContext(RhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::OneRHSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitOneRHS(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSFirstropRHSContext ------------------------------------------------------------------

std::vector<kernelParser::RhsContext *> kernelParser::RHSFirstropRHSContext::rhs() {
  return getRuleContexts<kernelParser::RhsContext>();
}

kernelParser::RhsContext* kernelParser::RHSFirstropRHSContext::rhs(size_t i) {
  return getRuleContext<kernelParser::RhsContext>(i);
}

kernelParser::RhsFirstCalcContext* kernelParser::RHSFirstropRHSContext::rhsFirstCalc() {
  return getRuleContext<kernelParser::RhsFirstCalcContext>(0);
}

kernelParser::RHSFirstropRHSContext::RHSFirstropRHSContext(RhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSFirstropRHSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSFirstropRHS(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSsRefContext ------------------------------------------------------------------

kernelParser::SRefContext* kernelParser::RHSsRefContext::sRef() {
  return getRuleContext<kernelParser::SRefContext>(0);
}

kernelParser::RHSsRefContext::RHSsRefContext(RhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSsRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSsRef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHStRefContext ------------------------------------------------------------------

kernelParser::TRefContext* kernelParser::RHStRefContext::tRef() {
  return getRuleContext<kernelParser::TRefContext>(0);
}

kernelParser::RHStRefContext::RHStRefContext(RhsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHStRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHStRef(this);
  else
    return visitor->visitChildren(this);
}

kernelParser::RhsContext* kernelParser::rhs() {
   return rhs(0);
}

kernelParser::RhsContext* kernelParser::rhs(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  kernelParser::RhsContext *_localctx = _tracker.createInstance<RhsContext>(_ctx, parentState);
  kernelParser::RhsContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, kernelParser::RuleRhs, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<RHStRefContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(58);
      tRef();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<RHSsRefContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      sRef();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<RHSconstNumContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(60);
      constNum();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<OneRHSContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(61);
      match(kernelParser::T__1);
      setState(62);
      rhs(0);
      setState(63);
      match(kernelParser::T__2);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(75);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<RHSFirstropRHSContext>(_tracker.createInstance<RhsContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleRhs);
          setState(67);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(68);
          rhsFirstCalc();
          setState(69);
          rhs(7);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<RHSSecondopRHSContext>(_tracker.createInstance<RhsContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleRhs);
          setState(71);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(72);
          rhsSecondCalc();
          setState(73);
          rhs(6);
          break;
        }

        } 
      }
      setState(79);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- RhsFirstCalcContext ------------------------------------------------------------------

kernelParser::RhsFirstCalcContext::RhsFirstCalcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::RhsFirstCalcContext::getRuleIndex() const {
  return kernelParser::RuleRhsFirstCalc;
}

void kernelParser::RhsFirstCalcContext::copyFrom(RhsFirstCalcContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RHSFirstCalcIsDIVContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::RHSFirstCalcIsDIVContext::DIV() {
  return getToken(kernelParser::DIV, 0);
}

kernelParser::RHSFirstCalcIsDIVContext::RHSFirstCalcIsDIVContext(RhsFirstCalcContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSFirstCalcIsDIVContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSFirstCalcIsDIV(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSFirstCalcINTDIVContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::RHSFirstCalcINTDIVContext::INTDIV() {
  return getToken(kernelParser::INTDIV, 0);
}

kernelParser::RHSFirstCalcINTDIVContext::RHSFirstCalcINTDIVContext(RhsFirstCalcContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSFirstCalcINTDIVContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSFirstCalcINTDIV(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSFirstCalcIsMULContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::RHSFirstCalcIsMULContext::MUL() {
  return getToken(kernelParser::MUL, 0);
}

kernelParser::RHSFirstCalcIsMULContext::RHSFirstCalcIsMULContext(RhsFirstCalcContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSFirstCalcIsMULContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSFirstCalcIsMUL(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSFirstCalcMODContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::RHSFirstCalcMODContext::MOD() {
  return getToken(kernelParser::MOD, 0);
}

kernelParser::RHSFirstCalcMODContext::RHSFirstCalcMODContext(RhsFirstCalcContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSFirstCalcMODContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSFirstCalcMOD(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::RhsFirstCalcContext* kernelParser::rhsFirstCalc() {
  RhsFirstCalcContext *_localctx = _tracker.createInstance<RhsFirstCalcContext>(_ctx, getState());
  enterRule(_localctx, 12, kernelParser::RuleRhsFirstCalc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case kernelParser::MUL: {
        _localctx = dynamic_cast<RhsFirstCalcContext *>(_tracker.createInstance<kernelParser::RHSFirstCalcIsMULContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(80);
        match(kernelParser::MUL);
        break;
      }

      case kernelParser::DIV: {
        _localctx = dynamic_cast<RhsFirstCalcContext *>(_tracker.createInstance<kernelParser::RHSFirstCalcIsDIVContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(81);
        match(kernelParser::DIV);
        break;
      }

      case kernelParser::MOD: {
        _localctx = dynamic_cast<RhsFirstCalcContext *>(_tracker.createInstance<kernelParser::RHSFirstCalcMODContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(82);
        match(kernelParser::MOD);
        break;
      }

      case kernelParser::INTDIV: {
        _localctx = dynamic_cast<RhsFirstCalcContext *>(_tracker.createInstance<kernelParser::RHSFirstCalcINTDIVContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(83);
        match(kernelParser::INTDIV);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsSecondCalcContext ------------------------------------------------------------------

kernelParser::RhsSecondCalcContext::RhsSecondCalcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::RhsSecondCalcContext::getRuleIndex() const {
  return kernelParser::RuleRhsSecondCalc;
}

void kernelParser::RhsSecondCalcContext::copyFrom(RhsSecondCalcContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RHSSecondCalcIsPLUSContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::RHSSecondCalcIsPLUSContext::PLUS() {
  return getToken(kernelParser::PLUS, 0);
}

kernelParser::RHSSecondCalcIsPLUSContext::RHSSecondCalcIsPLUSContext(RhsSecondCalcContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSSecondCalcIsPLUSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSSecondCalcIsPLUS(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RHSSecondCalcIsMINUSContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::RHSSecondCalcIsMINUSContext::MINUS() {
  return getToken(kernelParser::MINUS, 0);
}

kernelParser::RHSSecondCalcIsMINUSContext::RHSSecondCalcIsMINUSContext(RhsSecondCalcContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::RHSSecondCalcIsMINUSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitRHSSecondCalcIsMINUS(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::RhsSecondCalcContext* kernelParser::rhsSecondCalc() {
  RhsSecondCalcContext *_localctx = _tracker.createInstance<RhsSecondCalcContext>(_ctx, getState());
  enterRule(_localctx, 14, kernelParser::RuleRhsSecondCalc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case kernelParser::PLUS: {
        _localctx = dynamic_cast<RhsSecondCalcContext *>(_tracker.createInstance<kernelParser::RHSSecondCalcIsPLUSContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(86);
        match(kernelParser::PLUS);
        break;
      }

      case kernelParser::MINUS: {
        _localctx = dynamic_cast<RhsSecondCalcContext *>(_tracker.createInstance<kernelParser::RHSSecondCalcIsMINUSContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(87);
        match(kernelParser::MINUS);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TRefContext ------------------------------------------------------------------

kernelParser::TRefContext::TRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::TRefContext::getRuleIndex() const {
  return kernelParser::RuleTRef;
}

void kernelParser::TRefContext::copyFrom(TRefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TREFContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::TREFContext::Id() {
  return getToken(kernelParser::Id, 0);
}

kernelParser::ClistContext* kernelParser::TREFContext::clist() {
  return getRuleContext<kernelParser::ClistContext>(0);
}

kernelParser::AlistContext* kernelParser::TREFContext::alist() {
  return getRuleContext<kernelParser::AlistContext>(0);
}

kernelParser::TREFContext::TREFContext(TRefContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::TREFContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitTREF(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::TRefContext* kernelParser::tRef() {
  TRefContext *_localctx = _tracker.createInstance<TRefContext>(_ctx, getState());
  enterRule(_localctx, 16, kernelParser::RuleTRef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<TRefContext *>(_tracker.createInstance<kernelParser::TREFContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(kernelParser::Id);
    setState(91);
    match(kernelParser::T__3);
    setState(92);
    clist();
    setState(93);
    match(kernelParser::T__4);
    setState(94);
    match(kernelParser::T__5);
    setState(95);
    alist();
    setState(96);
    match(kernelParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SRefContext ------------------------------------------------------------------

kernelParser::SRefContext::SRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t kernelParser::SRefContext::getRuleIndex() const {
  return kernelParser::RuleSRef;
}

void kernelParser::SRefContext::copyFrom(SRefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SREFContext ------------------------------------------------------------------

tree::TerminalNode* kernelParser::SREFContext::Id() {
  return getToken(kernelParser::Id, 0);
}

kernelParser::ClistContext* kernelParser::SREFContext::clist() {
  return getRuleContext<kernelParser::ClistContext>(0);
}

kernelParser::SREFContext::SREFContext(SRefContext *ctx) { copyFrom(ctx); }


antlrcpp::Any kernelParser::SREFContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<kernelVisitor*>(visitor))
    return parserVisitor->visitSREF(this);
  else
    return visitor->visitChildren(this);
}
kernelParser::SRefContext* kernelParser::sRef() {
  SRefContext *_localctx = _tracker.createInstance<SRefContext>(_ctx, getState());
  enterRule(_localctx, 18, kernelParser::RuleSRef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<SRefContext *>(_tracker.createInstance<kernelParser::SREFContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(kernelParser::Id);
    setState(99);
    match(kernelParser::T__3);
    setState(100);
    clist();
    setState(101);
    match(kernelParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClistContext ------------------------------------------------------------------
